base/game-store-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: game-store-db
  name: game-store-db
  namespace: my-games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-store-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: game-store-db
    spec:
      volumes:
       - name: my-sql-dump
         configMap: 
           name: mysql-dump-config
      containers:
      - image: mysql
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts: 
          - name: my-sql-dump
            mountPath: /docker-entrypoint-initdb.d  
        resources: {}
status: {}
