base/simple-frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: simple-frontend
  name: simple-frontend
  namespace: my-games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-frontend
    spec:
      volumes:
       - name: index-html
         configMap:
          name: index-html
      containers:
      - image: nginx
        name: simple-frontend
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
         - name: index-html
           mountPath: /usr/share/nginx/html
        resources: {}
status: {}
