base/api-genre-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: api-genre
  name: api-genre
  namespace: my-games
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: api-genre
status:
  loadBalancer: {}
