base/game-store-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: game-store-db
  name: game-store-db
  namespace: my-games
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: game-store-db
status:
  loadBalancer: {}
