base/simple-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: simple-frontend
  name: simple-frontend
  namespace: my-games
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: simple-frontend
status:
  loadBalancer: {}
