base/ingress-genre-region.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  name: ingress-genre-region
  namespace: my-games
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-genre
            port:
              number: 5000
        path: /filter/genre
        pathType: Prefix
      - backend:
          service:
            name: api-region
            port:
              number: 9090
        path: /filter/region
        pathType: Prefix
      - backend:
          service:
            name: simple-frontend
            port:
              number: 8080
        path: /
        pathType: Prefix
